login item plugin
added login item plugin
fixed issue so client could connect to daemon

--- a/Daemon/Daemon/watchList.plist
+++ b/Daemon/Daemon/watchList.plist
@@ -36,8 +36,7 @@
 		<string>Login Item</string>
 		<key>paths</key>
 		<array>
-			<string>~/Library/Preferences/com.apple.loginitems.plist</string>
-			<string>~/Library/Application Support/com.apple.backgroundtaskmanagementagent/backgrounditems.btm</string>
+			<string>^(\/Users\/.+|)\/Library\/Application Support\/com.apple.backgroundtaskmanagementagent\/backgrounditems.btm</string>
 		</array>
 		<key>class</key>
 		<string>LoginItem</string>
