--- a/Daemon/Daemon/Info.plist
+++ b/Daemon/Daemon/Info.plist
@@ -16,19 +16,6 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>com.objective-see.lulu</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>lulu</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSMinimumSystemVersion</key>
@@ -38,6 +25,6 @@
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
-	<string>NSApplicationKeyEvents</string>
+	<string>NSApplication</string>
 </dict>
 </plist>
