--- a/Installer/Helper/Info.plist
+++ b/Installer/Helper/Info.plist
@@ -16,7 +16,7 @@
 	<string>Copyright (c) 2020 Objective-See. All rights reserved.</string>
 	<key>SMAuthorizedClients</key>
 	<array>
-		<string>anchor apple generic and identifier &quot;com.objective-see.blockblock.installer&quot; and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = VBG97UB4TA)</string>
+		<string>anchor apple generic and identifier "com.objective-see.blockblock.installer" and (certificate leaf[field.1.2.840.113635.100.6.1.9] /* exists */ or certificate 1[field.1.2.840.113635.100.6.2.6] /* exists */ and certificate leaf[field.1.2.840.113635.100.6.1.13] /* exists */ and certificate leaf[subject.OU] = VBG97UB4TA)</string>
 	</array>
 </dict>
 </plist>
